--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Nuevo Amanecer — Grupo Solidario</title>
   </head>
   <body>
+
+    <!-- Encabezado -->
     <header>
       <h1>Nuevo Amanecer</h1>
       <nav>
@@ -18,12 +20,16 @@
       </nav>
     </header>
 
+    <!-- Contenido principal -->
     <main>
+      
+      <!-- Quiénes somos -->
       <section id="quienes-somos">
         <h2>Somos Nuevo Amanecer</h2>
         <p>Somos un grupo solidario comprometido en llevar sonrisas, esperanza y apoyo a quienes más lo necesitan. Organizamos actividades y campañas en fechas especiales durante todo el año.</p>
       </section>
 
+      <!-- Próximas actividades -->
       <section id="actividades">
         <h2>Próximas actividades</h2>
         <ul>
@@ -32,6 +38,7 @@
         </ul>
       </section>
 
+      <!-- Cómo ayudar -->
       <section id="ayudar">
         <h2>Cómo ayudar</h2>
         <ul>
@@ -41,14 +48,17 @@
         </ul>
       </section>
 
+      <!-- Contacto -->
       <section id="contacto">
         <h2>Contacto</h2>
         <p>Escríbenos a <a href="mailto:contacto@nuevoamanecer.org">contacto@nuevoamanecer.org</a></p>
       </section>
     </main>
 
+    <!-- Pie de página -->
     <footer>
       <p>&copy; 2025 Nuevo Amanecer — Todos los derechos reservados.</p>
     </footer>
+
   </body>
 </html>
