--- a/index.html
+++ b/index.html
@@ -22,14 +22,11 @@
 
     <!-- Contenido principal -->
     <main>
-      
-      <!-- Quiénes somos -->
       <section id="quienes-somos">
         <h2>Somos Nuevo Amanecer</h2>
-        <p>Somos un grupo solidario comprometido en llevar sonrisas, esperanza y apoyo a quienes más lo necesitan. Organizamos actividades y campañas en fechas especiales durante todo el año.</p>
+        <p>Somos un grupo solidario comprometido en llevar sonrisas...</p>
       </section>
 
-      <!-- Próximas actividades -->
       <section id="actividades">
         <h2>Próximas actividades</h2>
         <ul>
@@ -38,7 +35,6 @@
         </ul>
       </section>
 
-      <!-- Cómo ayudar -->
       <section id="ayudar">
         <h2>Cómo ayudar</h2>
         <ul>
@@ -48,7 +44,6 @@
         </ul>
       </section>
 
-      <!-- Contacto -->
       <section id="contacto">
         <h2>Contacto</h2>
         <p>Escríbenos a <a href="mailto:contacto@nuevoamanecer.org">contacto@nuevoamanecer.org</a></p>
