--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Nuevo Amanecer — Grupo Solidario</title>
+    <link rel="stylesheet" href="styles.css" /> <!-- Esto conecta tu archivo CSS -->
   </head>
   <body>
 
