--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Nuevo Amanecer — Grupo Solidario</title>
-    <link rel="stylesheet" href="styles.css" /> <!-- Esto conecta tu archivo CSS -->
+    <link rel="stylesheet" href="styles.css" /> <!-- Vinculando el archivo CSS -->
   </head>
   <body>
 
@@ -23,11 +23,13 @@
 
     <!-- Contenido principal -->
     <main>
+      <!-- Sección Quiénes somos -->
       <section id="quienes-somos">
         <h2>Somos Nuevo Amanecer</h2>
-        <p>Somos un grupo solidario comprometido en llevar sonrisas...</p>
+        <p>Somos un grupo solidario comprometido en llevar sonrisas, esperanza y apoyo a quienes más lo necesitan. Organizamos actividades y campañas en fechas especiales durante todo el año.</p>
       </section>
 
+      <!-- Sección Actividades -->
       <section id="actividades">
         <h2>Próximas actividades</h2>
         <ul>
@@ -36,6 +38,7 @@
         </ul>
       </section>
 
+      <!-- Sección Cómo ayudar -->
       <section id="ayudar">
         <h2>Cómo ayudar</h2>
         <ul>
@@ -45,6 +48,7 @@
         </ul>
       </section>
 
+      <!-- Sección Contacto -->
       <section id="contacto">
         <h2>Contacto</h2>
         <p>Escríbenos a <a href="mailto:contacto@nuevoamanecer.org">contacto@nuevoamanecer.org</a></p>
